FDN-3751 Provide lib-play-standalone for use in cronjobs etc.. (#568)